further fixed pipeline errors